--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "netlify-deploy",
+  "name": "Template",
   "version": "1.0.0",
-  "description": "Testing setup",
+  "description": "webpack config | github pages deploy | netlify",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --open 'Google Chrome'",
