--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Template",
+  "name": "template",
   "version": "1.0.0",
   "description": "webpack config | github pages deploy | netlify",
   "main": "index.js",
